BugFixed via overflowHiden

--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,8 +1,12 @@
 /* ---------------------------------------------------------------- GENERAL RULES --------------------------------------------------------------- */
+*{
+   overflow-x: hidden;
+}
 html {
     scroll-behavior: smooth;
     padding: 0;
     margin: 0;
+
 }
 
 body {
